Fixed alignment issue on pricing card buttons when viewed from phone

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ button {
     cursor: pointer;
 }
 
+/*Navbar*/
 
 .Navbar {
     display: flex;
@@ -62,6 +63,10 @@ button {
     color: #14162b;
     font-size: 15px;
 }
+
+/* Navbar end */
+
+/* Hero */
 
 .hero {
     background-image: linear-gradient(
@@ -116,6 +121,10 @@ button {
     align-items: end;
 }
 
+
+/*Hero end */
+
+/* speakers info*/
 
 .meet-speakers {
     margin-top: 70px;
@@ -174,6 +183,10 @@ button {
 
 }
 
+/* Speakers info end*/
+
+/* Pricing cards*/
+
 .pricing {
     justify-items: center;
     margin-top: 100px;
@@ -231,7 +244,7 @@ button {
 }
 
 .pricing-plans-cards.pro {
-  background-color: #0d1b2aFF; /* Dark midnight blue */
+  background-color: #0d1b2aFF;
   border: 1px solid #1e293b;
   color: #ffffff;
 }
@@ -289,10 +302,17 @@ ul li::marker {
     border: 1.5px solid #3730f2;
 }
 
+.btn-standard,
+.btn-pro,
+.btn-team {
+    margin-top: auto;
+    padding-top: 10px;
+}
+
 .why-attend {
     justify-items: center;
     margin-top: 100px;
-    padding: 80px;
+
 }
 
 .attend {
